# aku-utils

./: .flake8  .gitignore  Makefile  README.md  logging.conf  mkdocs.yml  pyproject.toml  tox.ini
aku_utils/: __init__.py
aku_utils/calc/: __init__.py  datetime.py
aku_utils/common/: __init__.py
aku_utils/data/: __init__.py  averages.py  bias_and_weights.py  datetime.py
aku_utils/t/: configs.py
aku_utils/transforms/: __init__.py  configs.py
archive/: __init__.py
dev/: dev.ipynb  panel.parquet
docs/: index.md  modules.md
src/aku_utils/: __init__.py
src/aku_utils/data/: __init__.py
src/aku_utils/utils/: __init__.py
tests/: test_data.py
