[project]
name = "aku-utils"
version = "0.1.0"
description = "Utils for data processing"
authors = [
    {name = "stsibikov"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]
packages = [
    { include = "aku_utils" }
]

[project.urls]
Homepage = "https://github.com/stsibikov/aku-utils"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
