[project]
name = "aku-utils"
version = "0.1.1"
description = "Utils for data processing"
authors = [
    {name = "stsibikov"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]
packages = [
    { include = "aku_utils" }
]

[project.urls]
homepage = "https://github.com/stsibikov/aku-utils"
repository = "https://github.com/stsibikov/aku-utils"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

